--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h2 style = color:brown>This is pretty cool</h2>
 
 <strong style = color:red>England is my city!</strong>
-
+<!--yet aither lin-->
 <img src="no.jpg" width="300" alt="meme">
 
 <p>My bed sucks, It squeeks a lot. I don't like it</p>
